--- a/to do list/to do list.html
+++ b/to do list/to do list.html
@@ -12,10 +12,10 @@
     <h1>TODO List</h1>
     <input type="text" id="taskInput" placeholder="Adicionar nova tarefa">
     <button onclick="addTask()">Adicionar</button>
+    <button id="showHiddenButton">Mostrar Tarefas Ocultas</button>
     <ul id="taskList"></ul>
   </div>
 
   <script src="to do list.js"></script>
 </body>
 </html>
-
